@@ -1,5 +1,5 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
-<kpartgui name="akregator_part" version="8">
+<kpartgui name="akregator_part" version="9">
 <MenuBar>
   <Menu name="file">
     <Action name="file_open"/>
@@ -22,6 +22,7 @@
     <Separator/>
     <Action name="feed_next_unread"/>
     <Action name="feed_mark_all_as_read"/>
+    <Action name="feed_mark_all_feeds_as_read"/>
   </Menu>
   <Menu name="settings">
     <Action name="normal_view"/>
