@@ -17,6 +17,7 @@ Bug Fixes:
 #82618 - Don't crash if there's no kpart available -tpr
 #82691 - Don't minimize but close aKregator when session is shutting down -tpr
        - Mark all read marks everything as read -tpr
+#82752 - Mark all as read marks every entry in feed(group), mark all feeds as read marks every feed(group) as read -tpr
 
 Changes from 1.0b1 to 1.0b2:
 -----------------------------
